--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings 配置站点
-title: 'changeiot的博客'
+title: '张恨水和秀秀的博客'
 description: '记录学习的点点滴滴。'
 keyword: blog, java, share, technology
-url: 'https://changeiot.github.io' # your host
+url: 'https://zhangzhang-xiu.github.io' # your host
 
 # when build blog on server, if you don't need baseurl, you should leave this value blank.
 # 在服务器上建站时，如果你不需要子域名，请将这一格留空
