--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings 配置站点
 title: '张恨水和秀秀的博客'
-description: '记录学习的点点滴滴。'
+description: '生活就是一个游乐场。'
 keyword: blog, java, share, technology
 url: 'https://zhangzhang-xiu.github.io' # your host
 
