--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer:
 author: '张章'
 nickname: '张恨水'
 bio: '看我老婆就知道我有钱'
-avatar: '/assets/img/pikaqiu1.png'
+avatar: '/assets/img/pikaqiu1.jpg'
 
 # Search
 search: true
